Prevent iframes from being too wide (in blog)

--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -3,6 +3,10 @@
 
 $softShadow: 0 0.5em 1em rgba(0,0,0,.1); 
 
+iframe {
+  max-width: 100%;
+}
+
 #wrapper.page {
   #layout-content {
     background: white;
